--- a/src/App.css
+++ b/src/App.css
@@ -1,193 +1,215 @@
-#root {
-  max-width: 1280px;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-nav {
-  background: #FFF7ED;
-  display: flex;
-  justify-content: space-between;
-  width: 100dvw;
-  align-items: center;
-  padding: .5em .75em;
-}
-
-.logo {
-font-family: Inter;
-font-size: 25px;
-font-weight: 900;
-line-height: 40px;
-letter-spacing: 0em;
-text-align: left;
-color: #000000;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #fff7ed;
+  font-family: "Inter", sans-serif;
 }
 
 a {
-  text-decoration: none;
+  text-decoration: unset;
+  color: unset;
 }
 
-.link_container {
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.site-wrapper {
+  min-height: 100vh;
   display: flex;
-  width: 40%;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+header {
+  height: 110px;
+  display: flex;
+  align-items: center;
+  padding-block: 10px;
+}
+
+header .site-logo {
+  color: black;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 25px;
 }
 
 header a {
-    font-family: Inter;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 23px;
-  letter-spacing: 0em;
-  text-align: right;
-  color: #4D4D4D;
-  cursor: pointer;
   text-decoration: none;
-  
+  color: #4d4d4d;
+  font-weight: 600;
+  padding: 5px 20px;
 }
 
 header a:hover {
   color: #161616;
   text-decoration: underline;
-} 
+}
+
+header .login-icon {
+  height: 18px;
+  width: 18px;
+}
+
+header .login-link {
+  display: inline-flex;
+  align-items: center;
+}
+
+nav {
+  display: flex;
+}
+
+main {
+  margin-bottom: 84px;
+}
 
 footer {
-  background: #252525;
-  margin-top: 1em;
-}
-
-footer > p {
-  font-family: Inter;
-font-size: 14px;
-font-weight: 500;
-line-height: 23px;
-letter-spacing: 0em;
-text-align: center;
-color: #AAAAAA;
-margin: 0;
-padding: 1em 0;
-}
-
-.home_container, .about_container {
-  padding: 0 1em;
-}
-
-.home_container {
-  letter-spacing: 0em;
-  text-align: left;
-  color: #fff;
-  font-family: Inter;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("/images/home-hero.png") no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 350px;
-    color: white;
-    padding: 45px 23px;
-    width: 100dvw;
-}
-
-.home_title {
-font-size: 36px;
-font-weight: 800;
-line-height: 42px;
-}
-
-.home_text {
-font-size: 16px;
-font-weight: 500;
-line-height: 24px;
-}
-
-.home_button {
-  background: #FF8C38;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 32px;
-  text-align: center;
-  width: 90%;
-  display: block;
-  margin: 0 auto;
-  border-radius: 5px;
-  border: none;
-  padding: .5em 0;
-}
-
-.about_container {
-  font-family: Inter;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #161616;
-  background: #FFF7ED;
+  background-color: #161616;
+  color: #aaaaaa;
+  height: 74px;
   display: flex;
-  flex-direction: column;
-}
-
-.about-hero-image {
-  max-width: 100%;
-}
-
-.about_header {
-font-size: 32px;
-font-weight: 700;
-line-height: 38px;
-letter-spacing: 0em;
-color: #161616;
-}
-
-.about_text {
-  font-size: 16px;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
   font-weight: 500;
-  line-height: 22px;
-}
-
-.about_bottom_container {
-  background: #FFCC8D;
-  border-radius: 5px;
-  font-family: Inter;
-  font-weight: 700;
-  text-align: left;
-  letter-spacing: 0em;
-  padding: 1em 0;
-  margin-bottom: 1em;
-}
-
-.about_bottom_container > h2 {
-  font-size: 24px;
-  line-height: 30px;
-  padding: 0 1em;
-}
-
-.about_padding {
-  padding-left: 1.25em;
 }
 
 .link-button {
   display: inline-block;
   text-align: center;
   text-decoration: none;
-  cursor: pointer;
   border: none;
-  padding: .75rem 1.375rem;
-  background: #161616;
+  padding: 0.75rem 1.375rem;
+  color: initial;
   font-weight: 700;
   border-radius: 5px;
   cursor: pointer;
-  transition: transform .1s ease-in-out;
+  transition: transform 0.1s ease-in-out;
 }
 
-.link-button:visited {
-  color:#fff;
+.back-button {
+  display: block;
+  color: black;
+  text-decoration: none;
+  margin-left: 26px;
+}
+
+.back-button span:hover {
+  text-decoration: underline;
 }
 
 .link-button:hover {
   transform: translate(1px, 1px);
 }
 
-.van-list-container {
-  padding-inline: 23px
+/*** HOME PAGE ***/
+.home-container {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
+      url("/images/home-hero.png") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 350px;
+  color: white;
+  padding: 45px 23px;
 }
 
+.home-container h1 {
+  font-weight: 700;
+  font-size: 2.25rem;
+  line-height: 42px;
+}
+
+.home-container p {
+  line-height: 24px;
+}
+
+.home-container a {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  background-color: #ff8c38;
+  border: none;
+  width: 100%;
+  margin-top: 27px;
+  padding-block: 0.75rem;
+  color: white;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform 0.1s ease-in-out;
+}
+
+.home-container a:hover {
+  transform: translate(1px, 1px);
+}
+
+/*** ABOUT PAGE ***/
+.about-hero-image {
+  max-width: 100%;
+}
+
+.about-page-content {
+  padding-inline: 23px;
+  color: #161616;
+  margin-bottom: 55px;
+}
+
+.about-page-content h1 {
+  line-height: 38px;
+}
+
+.about-page-content p {
+  line-height: 22px;
+}
+
+.about-page-cta {
+  background-color: #ffcc8d;
+  color: #161616;
+  padding-inline: 32px;
+  padding-bottom: 32px;
+  margin-inline: 27px;
+  border-radius: 5px;
+}
+
+.about-page-cta h2 {
+  margin: 0;
+  padding-block: 37px;
+}
+
+.about-page-cta .link-button {
+  background-color: #161616;
+  color: white;
+  border-radius: 10px;
+}
+
+/*** VAN PAGES ***/
+.van-list-container {
+  padding-inline: 23px;
+}
+
+.van-list-filter-buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.van-list-filter-buttons > a {
+  margin-right: 15px;
+}
 
 .van-list {
   display: grid;
@@ -199,7 +221,7 @@ color: #161616;
 
 .van-tile a {
   color: #161616;
-  text-decoration: none;    
+  text-decoration: none;
 }
 
 .van-tile img {
@@ -219,13 +241,13 @@ color: #161616;
   font-weight: 500;
   border: none;
   border-radius: 5px;
-  background-color: #FFEAD0;
-  color: #4D4D4D;
+  background-color: #ffead0;
+  color: #4d4d4d;
   transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .van-type:hover {
-  color: #FFEAD0;
+  color: #ffead0;
 }
 
 .van-type:focus {
@@ -233,18 +255,21 @@ color: #161616;
 }
 
 .van-type.selected {
-  color: #FFEAD0;
+  color: #ffead0;
 }
 
-.van-type.simple:hover, .van-type.simple.selected {
-  background-color: #E17654;
+.van-type.simple:hover,
+.van-type.simple.selected {
+  background-color: #e17654;
 }
 
-.van-type.rugged:hover, .van-type.rugged.selected {
-  background-color: #115E59;
+.van-type.rugged:hover,
+.van-type.rugged.selected {
+  background-color: #115e59;
 }
 
-.van-type.luxury:hover, .van-type.luxury.selected {
+.van-type.luxury:hover,
+.van-type.luxury.selected {
   background-color: #161616;
 }
 
@@ -258,15 +283,15 @@ color: #161616;
   border-radius: 5px;
   text-decoration: underline;
   background-color: transparent;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
-i[class*='van-type-'] {
+i[class*="van-type-"] {
   padding: 7px 14px;
 }
 
 .van-detail-container {
-  padding: 1em;
+  padding-inline: 27px;
 }
 
 .van-detail-container .back-button {
@@ -274,18 +299,7 @@ i[class*='van-type-'] {
   text-decoration: none;
 }
 
-.back-button {
-  display: block;
-  margin-top: 60px;
-  margin-left: 26px;
-}
-
-.back-button span:hover {
-  text-decoration: underline;
-}
-
 .van-detail-container .back-button:visited {
-  
 }
 
 .van-detail-container .back-button span {
@@ -301,7 +315,6 @@ i[class*='van-type-'] {
 .van-detail img {
   border-radius: 5px;
   margin-block: 47px;
-  width: 95%;
 }
 
 .van-detail h2 {
@@ -324,18 +337,19 @@ i[class*='van-type-'] {
 }
 
 .van-detail .link-button {
-  background-color: #FF8C38;
+  background-color: #ff8c38;
   color: white;
   font-size: 1.125rem;
 }
 
 .host-nav {
   display: flex;
+  margin-bottom: 30px;
 }
 
 .host-nav a {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 500;
   padding: 5px 20px;
 }
@@ -364,14 +378,17 @@ i[class*='van-type-'] {
   align-items: center;
   background-color: white;
   margin-bottom: 15px;
-  padding-block: 18px;
-  padding-left: 24px;
+  padding: 18px 24px;
 }
 
 .host-van-single > img {
   height: 70px;
   border-radius: 5px;
   margin-right: 17px;
+}
+
+.host-van-info {
+  margin-right: auto;
 }
 
 .host-van-info h3 {
@@ -416,20 +433,18 @@ i[class*='van-type-'] {
 .host-van-detail-nav {
   display: flex;
   margin-block: 25px;
-  background: inherit;
-  width: 100%;
 }
 
 .host-van-detail-nav a {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 500;
   padding: 5px 20px;
 }
 
 .host-van-detail-nav a:first-of-type {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 500;
   padding: 5px 15px;
   margin-left: -15px;
@@ -457,81 +472,12 @@ i[class*='van-type-'] {
 
 .host-van-price > span {
   font-size: 16px;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
 .host-van-detail-image {
   height: 100px;
   border-radius: 5px;
-}
-
-.van-type {
-  height: 34px;
-  padding: 6px 26px;
-  font-style: normal;
-  font-weight: 500;
-  border: none;
-  border-radius: 5px;
-  background-color: #FFEAD0;
-  color: #4D4D4D;
-  transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.van-type:hover {
-  color: #FFEAD0;
-}
-
-.van-type:focus {
-  outline: none;
-}
-
-.van-type.selected {
-  color: #FFEAD0;
-}
-
-.van-type.simple:hover, .van-type.simple.selected {
-  background-color: #E17654;
-}
-
-.van-type.rugged:hover, .van-type.rugged.selected {
-  background-color: #115E59;
-}
-
-.van-type.luxury:hover, .van-type.luxury.selected {
-  background-color: #161616;
-}
-
-.van-type.clear-filters {
-  margin-left: -20px;
-  height: 34px;
-  padding: 6px 26px;
-  font-style: normal;
-  font-weight: 500;
-  border: none;
-  border-radius: 5px;
-  text-decoration: underline;
-  background-color: transparent;
-  color: #4D4D4D;
-}
-
-i[class*='van-type-'] {
-  padding: 7px 14px;
-}
-
-.van-type.selected {
-  color: #FFEAD0;
-}
-
-.van-type.simple:hover, .van-type.simple.selected {
-  background-color: #E17654;
-}
-
-.van-type.rugged:hover, .van-type.rugged.selected {
-  background-color: #115E59;
-}
-
-.van-type.luxury:hover, .van-type.luxury.selected {
-  background-color: #161616;
 }
 
 .not-found-container {
@@ -555,7 +501,7 @@ i[class*='van-type-'] {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 500px;    
+  max-width: 500px;
 }
 
 .login-form > input {
@@ -581,26 +527,216 @@ i[class*='van-type-'] {
 }
 
 .login-form > button {
-  background-color: #FF8C38;
+  background-color: #ff8c38;
   border: none;
-  cursor: pointer;
   border-radius: 6px;
   height: 55px;
   margin-top: 22px;
   color: white;
   font-family: "Inter", sans-serif;
+  cursor: pointer;
 }
 
-header .login-icon {
-  height: 25px;
-  width: 25px;
+.login-form > button:disabled {
+  background-color: #aaaaaa;
+  cursor: not-allowed;
 }
 
-header .login-link {
-  display: inline-flex;
+.login-error {
+  color: red;
+}
+
+.host-dashboard-earnings {
+  background-color: #ffead0;
+  padding: 37px 26px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.login-first {
-  color: red;
+.host-dashboard-earnings > .info > h1 {
+  font-size: 36px;
+  color: #161616;
+  margin: 0;
+}
+
+.host-dashboard-earnings > .info > p {
+  color: #4d4d4d;
+}
+
+.host-dashboard-earnings > .info > p > span {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.host-dashboard-earnings > .info > h2 {
+  margin: 0;
+  font-size: 38px;
+  color: #161616;
+  font-weight: 900;
+}
+
+.host-dashboard-reviews {
+  background-color: #ffddb2;
+  padding: 25px 26px;
+  display: flex;
+  align-items: center;
+}
+
+.host-dashboard-reviews > h2 {
+  margin: 0;
+}
+
+.host-dashboard-reviews .star {
+  color: #ff8c38;
+  margin-left: 15px;
+  font-size: 25px;
+}
+
+.host-dashboard-reviews p {
+  margin-left: 5px;
+  font-size: 20px;
+  color: #4d4d4d;
+  margin-right: auto;
+}
+
+.host-dashboard-reviews p > span {
+  font-weight: bold;
+  color: #161616;
+}
+
+.host-dashboard-vans {
+  padding: 38px 26px;
+}
+
+.host-dashboard-vans > .top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.host-dashboard-vans .host-vans-list {
+  padding-inline: 0;
+}
+
+.host-income {
+  padding-inline: 26px;
+  color: #161616;
+}
+
+.host-income > p {
+  color: #4d4d4d;
+}
+
+.host-income > p span {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.host-income > h2 {
+  font-size: 38px;
+  color: #161616;
+  font-weight: 900;
+}
+
+img.graph {
+  width: 100%;
+  max-width: 500px;
+}
+
+.host-income .info-header > p {
+  color: #4d4d4d;
+}
+
+.host-income .info-header > p span {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.host-income .info-header > h3 {
+  font-weight: 700;
+  font-size: 24px;
+  margin-top: 60px;
+}
+
+.host-income .transaction {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  margin-bottom: 31px;
+  padding: 35px 29px;
+  border-radius: 6px;
+}
+.host-income .transaction > h3 {
+  font-size: 36px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.host-income .transaction > p {
+  font-weight: 500;
+  font-size: 20px;
+  color: #4d4d4d;
+}
+
+.host-reviews {
+  padding-inline: 26px;
+  color: #161616;
+}
+
+.host-reviews .top-text {
+  display: flex;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.host-reviews .top-text > h2 {
+  font-weight: 700;
+  font-size: 32px;
+  margin: 0;
+  margin-right: 20px;
+}
+
+.host-reviews .top-text > p {
+  margin: 0;
+  color: #4d4d4d;
+}
+
+.host-reviews .top-text > p span {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.host-reviews > img {
+  margin-bottom: 36px;
+}
+
+.host-reviews .review {
+  margin-block: 25px;
+}
+
+.host-reviews .review .info {
+  display: flex;
+}
+
+.host-reviews .review .name {
+  color: #161616;
+  margin-right: 10px;
+  font-weight: 600;
+}
+
+.host-reviews .review .date {
+  color: #8c8c8c;
+}
+
+.host-reviews hr {
+  background-color: #c7c7c7;
+  height: 1px;
+  border: 0;
+}
+
+.host-reviews .review-star {
+  color: #ff8c38;
+  margin-right: 5px;
 }
